--- a/src/features/user/component/InputBox/style.css
+++ b/src/features/user/component/InputBox/style.css
@@ -68,9 +68,10 @@
 
   color: rgba(45, 66, 178, 1);
 
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 400;
   line-height: 175%;
+  cursor: pointer;
 }
 
 .input-box-button:hover {
@@ -90,9 +91,11 @@
 
   color: rgba(138, 146, 166, 1);
 
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 400;
   line-height: 175%;
+
+  cursor: pointer;
 }
 
 .input-box-message {
